// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgeStack prod matches the snapshot 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "SPS CloudFront distribution domain (*.cloudfront.net)",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "SPS CloudFront distribution id",
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LogsBucketName": {
      "Description": "SPS CloudFront access logs bucket",
      "Value": {
        "Ref": "LogsBucket9C4D8843",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DefaultRscCacheCFC4DDE6": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS default cache (prod) -- Managed-CachingOptimized plus RSC header keying so App Router soft navigation works.",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-default-rsc-prod",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/impersonation*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/auth/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/revalidate*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/health/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/analytics",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/export/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/csp-report",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-resolve",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/feedback/submit",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/directory/people",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-portfolio",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/scholars/*/popover-context",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/topics/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/about/feedback",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/*/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/scholars/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/departments/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/centers/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/topics/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "SPS edge -- prod",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 60,
              "ErrorCode": 404,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": {
              "Ref": "DefaultRscCacheCFC4DDE6",
            },
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "SecurityHeadersE66B69D3",
            },
            "TargetOriginId": "SpsEdgeprodDistributionOrigin13FA7C7AF",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": false,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "LogsBucket9C4D8843",
                "RegionalDomainName",
              ],
            },
            "Prefix": "cf/prod/",
          },
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPPort": 80,
                "OriginProtocolPolicy": "http-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "Sps-App-prod:ExportsOutputFnGetAttPublicAlb84330974DNSNameFA3FF7E9",
              },
              "Id": "SpsEdgeprodDistributionOrigin13FA7C7AF",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "X-Origin-Verify",
                  "HeaderValue": "{{resolve:secretsmanager:scholars/prod/edge/origin-shared-secret:SecretString:::}}",
                },
              ],
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionMonitoringSubscription2503EB92": {
      "Properties": {
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "MonitoringSubscription": {
          "RealtimeMetricsSubscriptionConfig": {
            "RealtimeMetricsSubscriptionStatus": "Enabled",
          },
        },
      },
      "Type": "AWS::CloudFront::MonitoringSubscription",
    },
    "LogsBucket9C4D8843": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "sps-cf-logs-expire-prod",
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerPreferred",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LogsBucketPolicyD70D9252": {
      "Properties": {
        "Bucket": {
          "Ref": "LogsBucket9C4D8843",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "LogsBucket9C4D8843",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "LogsBucket9C4D8843",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "QueryKeyedCacheF5F61D4E": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS query-keyed cache (prod) -- per-query cache key, cookies stripped (#634).",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-query-keyed-prod",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "whitelist",
              "QueryStrings": [
                "mentees-sort",
                "page",
                "tab",
                "sort",
                "q",
                "role",
              ],
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "SecurityHeadersE66B69D3": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS security headers (prod) -- HSTS only; B21 layers CSP/XFO.",
          "Name": "sps-security-headers-prod",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`EdgeStack staging matches the snapshot 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "SPS CloudFront distribution domain (*.cloudfront.net)",
      "Value": {
        "Fn::GetAtt": [
          "Distribution830FAC52",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "SPS CloudFront distribution id",
      "Value": {
        "Ref": "Distribution830FAC52",
      },
    },
    "LogsBucketName": {
      "Description": "SPS CloudFront access logs bucket",
      "Value": {
        "Ref": "LogsBucket9C4D8843",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DefaultRscCacheCFC4DDE6": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS default cache (staging) -- Managed-CachingOptimized plus RSC header keying so App Router soft navigation works.",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-default-rsc-staging",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "none",
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "Distribution830FAC52": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/impersonation*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/edit*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/auth/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/revalidate*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/health/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/analytics",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/export/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/csp-report",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-resolve",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/feedback/submit",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/search*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/directory/people",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/nih-portfolio",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/scholars/*/popover-context",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/topics/*/publications",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/about/feedback",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/scholars/*/co-pubs/*/export",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/scholars/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/departments/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/centers/*",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "CachePolicyId": {
                "Ref": "QueryKeyedCacheF5F61D4E",
              },
              "Compress": true,
              "PathPattern": "/topics/*/scholars",
              "ResponseHeadersPolicyId": {
                "Ref": "SecurityHeadersE66B69D3",
              },
              "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "Comment": "SPS edge -- staging",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 60,
              "ErrorCode": 404,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": {
              "Ref": "DefaultRscCacheCFC4DDE6",
            },
            "Compress": true,
            "ResponseHeadersPolicyId": {
              "Ref": "SecurityHeadersE66B69D3",
            },
            "TargetOriginId": "SpsEdgestagingDistributionOrigin145B7DDC3",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": false,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "LogsBucket9C4D8843",
                "RegionalDomainName",
              ],
            },
            "Prefix": "cf/staging/",
          },
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPPort": 80,
                "OriginProtocolPolicy": "http-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "Sps-App-staging:ExportsOutputFnGetAttPublicAlb84330974DNSNameFA3FF7E9",
              },
              "Id": "SpsEdgestagingDistributionOrigin145B7DDC3",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "X-Origin-Verify",
                  "HeaderValue": "{{resolve:secretsmanager:scholars/staging/edge/origin-shared-secret:SecretString:::}}",
                },
              ],
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "DistributionMonitoringSubscription2503EB92": {
      "Properties": {
        "DistributionId": {
          "Ref": "Distribution830FAC52",
        },
        "MonitoringSubscription": {
          "RealtimeMetricsSubscriptionConfig": {
            "RealtimeMetricsSubscriptionStatus": "Enabled",
          },
        },
      },
      "Type": "AWS::CloudFront::MonitoringSubscription",
    },
    "LogsBucket9C4D8843": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Id": "sps-cf-logs-expire-staging",
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerPreferred",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "LogsBucketPolicyD70D9252": {
      "Properties": {
        "Bucket": {
          "Ref": "LogsBucket9C4D8843",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "LogsBucket9C4D8843",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "LogsBucket9C4D8843",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "QueryKeyedCacheF5F61D4E": {
      "Properties": {
        "CachePolicyConfig": {
          "Comment": "SPS query-keyed cache (staging) -- per-query cache key, cookies stripped (#634).",
          "DefaultTTL": 86400,
          "MaxTTL": 31536000,
          "MinTTL": 1,
          "Name": "sps-query-keyed-staging",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "none",
            },
            "EnableAcceptEncodingBrotli": true,
            "EnableAcceptEncodingGzip": true,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "RSC",
                "Next-Router-Prefetch",
              ],
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "whitelist",
              "QueryStrings": [
                "mentees-sort",
                "page",
                "tab",
                "sort",
                "q",
                "role",
              ],
            },
          },
        },
      },
      "Type": "AWS::CloudFront::CachePolicy",
    },
    "SecurityHeadersE66B69D3": {
      "Properties": {
        "ResponseHeadersPolicyConfig": {
          "Comment": "SPS security headers (staging) -- HSTS only; B21 layers CSP/XFO.",
          "Name": "sps-security-headers-staging",
          "SecurityHeadersConfig": {
            "StrictTransportSecurity": {
              "AccessControlMaxAgeSec": 63072000,
              "IncludeSubdomains": true,
              "Override": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
